implemented the template for the entire project